[project]
name = "data-workflow-intelligence"
version = "1.0.0"
description = "Financial Machine Learning Pipeline with Streamlit"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.13.0",
    "scikit-learn>=1.2.0",
    "streamlit>=1.22.0",
    "yfinance>=0.2.18",
    "openpyxl>=3.1.0",
    "joblib>=1.2.0",
    "seaborn>=0.12.0"
]
